style(NumberedHeading): prevent title's painted line to wrap below the title on small screens

--- a/src/components/Shared/NumberedHeading/NumberedHeading.module.scss
+++ b/src/components/Shared/NumberedHeading/NumberedHeading.module.scss
@@ -3,7 +3,6 @@
 .numberedHeading {
   display: flex;
   align-items: center;
-  flex-wrap: wrap;
   margin: 10px 0 40px;
   width: 100%;
   font-size: clamp(1.6rem, 5vw, 2rem);
